--- a/.github/workflows/ndvi.yml
+++ b/.github/workflows/ndvi.yml
@@ -2,8 +2,8 @@ name: Daily NDVI Fetch
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # Every day at 2:00 UTC
-  workflow_dispatch:     # Allows manual run
+    - cron: '0 2 * * *'  # daily at 02:00 UTC
+  workflow_dispatch:     # manual run option
 
 jobs:
   fetch-ndvi:
@@ -20,11 +20,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        pip install requests google-cloud-storage
 
     - name: Run NDVI fetch
       env:
-        GCS_BUCKET: ${{ secrets.GCS_BUCKET }}  # Optional
-        SH_CONFIG_ID: ${{ secrets.SH_CONFIG_ID }}
+        SH_CONFIG_ID: ${{ secrets.SH_CONFIG_ID }}                  # Sentinel Hub Config ID
+        GCS_BUCKET: ${{ secrets.GCS_BUCKET }}                     # GCS bucket name
+        GCS_SERVICE_ACCOUNT_JSON: ${{ secrets.GCS_SERVICE_ACCOUNT_JSON }}  # service account JSON
       run: |
         python fetch_ndvi.py
