--- a/.github/workflows/ndvi.yml
+++ b/.github/workflows/ndvi.yml
@@ -1,31 +1,37 @@
-name: Daily NDVI Fetch
+name: NDVI Fetch (Sentinel Hub)
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # daily at 02:00 UTC
-  workflow_dispatch:     # manual run option
+    - cron: "0 22 * * *"   # runs daily at 22:00 UTC
+  workflow_dispatch:       # allows manual run
 
 jobs:
   fetch-ndvi:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        pip install requests google-cloud-storage
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests google-cloud-storage numpy
 
-    - name: Run NDVI fetch
-      env:
-        SH_CONFIG_ID: ${{ secrets.SH_CONFIG_ID }}                  # Sentinel Hub Config ID
-        GCS_BUCKET: ${{ secrets.GCS_BUCKET }}                     # GCS bucket name
-        GCS_SERVICE_ACCOUNT_JSON: ${{ secrets.GCS_SERVICE_ACCOUNT_JSON }}  # service account JSON
-      run: |
-        python fetch_ndvi.py
+      # Write GCS service account JSON to a file (SAFE WAY)
+      - name: Write GCS credentials
+        run: |
+          echo '${{ secrets.GCS_SERVICE_ACCOUNT_JSON }}' > gcs-key.json
+
+      - name: Run NDVI fetch
+        env:
+          SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
+          SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
+          GCS_SERVICE_ACCOUNT_JSON: gcs-key.json
+        run: |
+          python fetch_ndvi.py
