--- a/.github/workflows/ndvi.yml
+++ b/.github/workflows/ndvi.yml
@@ -1,12 +1,12 @@
 name: Fetch NDVI
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 10 * * *"  # daily at 10 AM UTC
+    - cron: "0 6 * * *"  # daily at 6 AM UTC
+  workflow_dispatch:
 
 jobs:
-  fetch-ndvi:
+  fetch:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,17 +17,15 @@ jobs:
           python-version: 3.11
 
       - name: Install dependencies
-        run: pip install requests shapely
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests google-cloud-storage
 
       - name: Run fetch_ndvi.py
         env:
           SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
           SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
+          GCS_BUCKET: ndvi-exports
+          PADDOCKS_JSON_URL: https://storage.googleapis.com/ndvi-exports/paddocks.json
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCS_SERVICE_ACCOUNT_JSON }}
         run: python fetch_ndvi.py
-
-      - name: Upload CSV to GCS
-        uses: google-github-actions/upload-cloud-storage@v1
-        with:
-          path: paddocks_ndvi.csv
-          bucket: ndvi-exports
-          credentials: ${{ secrets.GCS_SERVICE_ACCOUNT_JSON }}
