--- a/.github/workflows/ndvi.yml
+++ b/.github/workflows/ndvi.yml
@@ -3,24 +3,46 @@ name: Fetch NDVI
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 6 * * *"
+    - cron: '0 8 * * *' # runs daily at 08:00 UTC, adjust if needed
 
 jobs:
-  fetch:
+  fetch-ndvi:
     runs-on: ubuntu-latest
+    env:
+      SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
+      SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
-      - name: Run fetch_ndvi
-        env:
-          SH_CLIENT_ID: ${{ secrets.SH_CLIENT_ID }}
-          SH_CLIENT_SECRET: ${{ secrets.SH_CLIENT_SECRET }}
-          SH_CONFIG_ID: ${{ secrets.SH_CONFIG_ID }}
+
+      - name: Run NDVI fetch script
         run: python fetch_ndvi.py
+
+      - name: Upload JSON to GCS
+        uses: google-github-actions/upload-cloud-storage@v1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          destination: "ndvi-exports/paddocks_ndvi.json"
+          path: paddocks_ndvi.json
+          resumable: false
+          gzip: false
+
+      - name: Upload CSV to GCS
+        uses: google-github-actions/upload-cloud-storage@v1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          destination: "ndvi-exports/paddocks_ndvi.csv"
+          path: paddocks_ndvi.csv
+          resumable: false
+          gzip: false
